# Competitive_Analyzer

./: .env.example  .gitignore  5-setup-guide.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.linux.txt
backend/app/: config.py  main.py
backend/app/agents/: emerging.py  guardrails.py  incumbents.py  market_sizing.py  synthesis.py
backend/app/models/: requests.py  responses.py
backend/app/routers/: analysis.py
backend/app/services/: pipeline.py
backend/tests/: conftest.py  test_pipeline.py  test_routers.py
frontend/: Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/features/analysis/: AccordionSection.tsx  AnalysisForm.tsx  AnalysisPage.tsx  ResearchCard.tsx  ResultsView.tsx  StreamProgress.tsx  SynthesisPanel.tsx
frontend/src/features/analysis/charts/: FundingChart.tsx  MarketFunnelChart.tsx  MarketShareChart.tsx
frontend/src/features/analysis/hooks/: useAnalysis.ts  useAnalysisStream.ts
frontend/src/lib/: api.ts  exportPdf.ts  schemas.ts
frontend/src/types/: analysis.ts
